CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4 FATAL_ERROR)
PROJECT(ahrs)

# Disable dynamic memory allocation in Eigen
ADD_DEFINITIONS(-DEIGEN_NO_MALLOC -DUKF_SINGLE_PRECISION)

INCLUDE_DIRECTORIES(../../include ${eigen_dir})

cmake_policy(SET CMP0042 NEW)

ADD_LIBRARY(ahrs SHARED ahrs.cpp)
SET_TARGET_PROPERTIES(ahrs PROPERTIES OUTPUT_NAME ahrs)